fixed layout issues due to newsletter in index.php

--- a/project/assets/css/base.css
+++ b/project/assets/css/base.css
@@ -18,12 +18,14 @@ body {
   background-color: #0e0d0d;
   color: #e6dccd;
   min-height:100vh;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 /* main section*/
 main {
     padding-top: 90px;
     min-height: 100vh;
-    overflow:hidden;
+   
 }
 /* typography*/
 h1 {
