--- a/project/assets/css/index.css
+++ b/project/assets/css/index.css
@@ -4,14 +4,15 @@
     background-position: center top;
     min-height: 85vh;
     width:100%;
+    padding-left: 5%;
     display: flex;
     align-items: center;
     justify-content: flex-start; 
     color: rgb(255, 255, 255);
-    padding-left: 60px;
     position: relative;
     z-index: 2;
     box-shadow: 0 8px 20px rgba(255, 255, 255, 0.6);
+    max-width: 100vw;
 
 }
 
@@ -69,7 +70,6 @@
 /* Tablets (max-width: 1024px) */
 @media (max-width: 1024px) {
     .hero {
-        padding-left: 40px;
         height: 80vh;
         background-position: center top;
     }
@@ -87,8 +87,6 @@
 @media (max-width: 768px) {
     .hero {
         justify-content: center;
-        padding-left: 20px;
-        padding-right: 20px;
         text-align: center;
         height: 70vh;
         background-position: center;
@@ -364,6 +362,7 @@
     width: 90%;
     flex-wrap: wrap;
     gap: 2rem;
+    max-width: 100%;
 }    
 
 
@@ -378,6 +377,7 @@
     animation: slideInLeftSection 1s ease-out forwards;
     animation-timeline: view();
     animation-range: entry 0% cover 40%;
+    max-width: 100%;
 }
 
 .showcase-content3 .showcase-butt-img4 {  /* the right part in the bottom part */
@@ -866,6 +866,7 @@
   justify-content: space-between;
   gap: 60px;
   flex-wrap: wrap;
+  overflow-x: hidden;
  
   view-timeline-name: --newsletter;
   view-timeline-axis: block;
@@ -911,7 +912,7 @@
 }
 
 .newsletter-image img {
-  width: clamp(300px, 90%, 700px);
+  max-width: clamp(300px, 90%, 800px);
   height:auto;
   opacity: 0;
   transform: translateX(100px);
